--- a/dbs_backend/src/main/resources/application.properties
+++ b/dbs_backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=2000
 
-spring.datasource.url=jdbc:mysql://d
+spring.datasource.url=jdbc:mysql:localhost//d
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
